Fix dark mode

--- a/userChrome.css
+++ b/userChrome.css
@@ -1,4 +1,4 @@
-#navigator-toolbox {
+#main-window:not([lwtheme="true"]) #navigator-toolbox {
 	-moz-appearance: -moz-mac-vibrant-titlebar-dark !important;
 }
 
@@ -21,4 +21,3 @@
 #nav-bar {
 	border-bottom: 1px solid var(--panelview-toolbarbutton-hover-bgcolor);
 }
-
